[metadata]
name = elasticsearch-curator
description = "Tending your Elasticsearch indices"
long_description = file: README.rst
version = attr: curator._version.__version__
author = Elastic
author_email = info@elastic.co
url = https://github.com/elastic/curator
license = Apache License, Version 2.0
keywords = elasticsearch, time-series, indexed, index-expiry
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires = 
    elasticsearch8==8.3.3
    urllib3>=1.26.11,<2
    requests>=2.28.1
    boto3>=1.24.54
    requests_aws4auth>=1.1.2
    click==8.1.3
    pyyaml==6.0.0
    voluptuous>=0.13.1
    certifi>=2022.6.15
    six>=1.16.0

setup_requires =
    elasticsearch8==8.3.3
    urllib3>=1.26.11,<2
    requests>=2.28.1
    boto3>=1.24.54
    requests_aws4auth>=1.1.2
    click==8.1.3
    pyyaml==6.0.0
    voluptuous>=0.13.1
    certifi>=2022.6.15
    six>=1.16.0

packages = curator
include_package_data = True
tests_require =
    mock
    nose
    coverage
    nosexcover

[options.entry_points]
console_scripts = 
    curator = curator.cli:cli
    curator_cli = curator.curator_cli:main
    es_repo_mgr = curator.repomgrcli:repo_mgr_cli

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal=1
